# xTauri

./: .gitignore  CLAUDE.md  IMPLEMENTATION_CHECKLIST.md  LICENSE  MIGRATION_GUIDE.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_IMPROVEMENTS.md  REFACTORING_QUICKSTART.md  REFACTORING_REPORT.md  REFACTORING_SUMMARY.md  RESUMO_REFATORACAO.md  USAGE_GUIDE.md  USER_GUIDE.md  index.html  package.json
.cursor/rules/: pnpm.mdc
.github/workflows/: release.yml
.kiro/steering/: product.md  structure.md  tech.md
scripts/: migrate-to-logger.md
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/benches/: cache_bench.rs  database_bench.rs  fuzzy_search_bench.rs  m3u_parser_bench.rs
src-tauri/data/: database.sqlite
src-tauri/icons/: icon.icns
src-tauri/src/: channels.rs  database.rs  error.rs  favorites.rs  filters.rs  fuzzy_search.rs  groups.rs  history.rs  image_cache.rs  image_cache_api.rs  integration_tests.rs  lib.rs  m3u_parser.rs  m3u_parser_helpers.rs  main.rs  playlists.rs  search.rs  search_cache.rs  settings.rs  state.rs  utils.rs
src-tauri/src/content_cache/: INCREMENTAL_SYNC.md  TASK_10_SUMMARY.md  TASK_11_SUMMARY.md  TASK_11_VERIFICATION.md  TASK_12_SUMMARY.md  TASK_12_VERIFICATION.md  TASK_13_SUMMARY.md  TASK_13_VERIFICATION.md  TASK_14_SUMMARY.md  TASK_14_VERIFICATION.md  TASK_15_3_SUMMARY.md  TASK_15_3_VERIFICATION.md  TASK_16_SUMMARY.md  TASK_16_VERIFICATION.md  TASK_17_SUMMARY.md  TASK_17_VERIFICATION.md  TASK_18_SUMMARY.md  TASK_18_VERIFICATION.md  background_scheduler.rs  cache_management_tests.rs  category_tests.rs  commands.rs  db_performance.rs  db_performance_benchmarks.rs  db_performance_tests.rs  db_utils.rs  fts.rs  fts_benchmarks.rs  fts_tests.rs  incremental_sync_tests.rs  mod.rs  movie_tests.rs  query_optimizer.rs  query_optimizer_benchmarks.rs  schema.rs  search_tests.rs  series_tests.rs  settings_commands_tests.rs  sync_api_tests.rs  sync_control_tests.rs  (+3 more)
src-tauri/src/playlists/: crud.rs  fetch.rs  legacy.rs  types.rs
src-tauri/src/xtream/: commands.rs  content_cache.rs  credential_manager.rs  database.rs  favorites.rs  filter.rs  graceful_degradation.rs  history.rs  mod.rs  performance_commands.rs  performance_monitor.rs  prefetch.rs  profile_manager.rs  retry.rs  saved_filters.rs  search.rs  search_history.rs  session_manager.rs  types.rs  xtream_client.rs
src-tauri/src/xtream/tests/: content_cache_tests.rs  credential_manager_tests.rs  favorites_tests.rs  filter_tests.rs  history_tests.rs  integration_tests.rs  mock_responses.rs  mod.rs  performance_tests.rs  profile_manager_tests.rs  retry_tests.rs  search_tests.rs  security_tests.rs  session_manager_tests.rs  xtream_client_tests.rs
src/components/: CachedImage.tsx  ChannelDetails.tsx  ChannelList.tsx  ChannelLoadingProgress.tsx  ContentDetails.tsx  ContentSyncManager.tsx  EPGDisplay.tsx  EPGTest.tsx  EmptyState.tsx  EnhancedVideoPlayer.tsx  ErrorBoundary.css  ErrorBoundary.tsx  ErrorMessage.tsx  FavoritesView.tsx  GroupList.tsx  Help.tsx  HelpTooltip.tsx  HistoryView.tsx  Icons.tsx  LoadingIndicator.tsx  MainContent.tsx  ModernVideoPlayer.tsx  MovieGrid.tsx  NavigationSidebar.tsx  NextEpisodeCountdown.tsx  ProfileManager.tsx  ProfileSelector.tsx  SavedFilters.tsx  SearchBar.tsx  SeriesBrowser.tsx  Settings.tsx  SkeletonLoader.tsx  VideoControls.tsx  VideoMetadataOverlay.tsx  VideoPlayer.tsx  VideoPlayerWrapper.tsx  VideoResumePrompt.tsx  VirtualChannelList.tsx  VirtualMovieGrid.tsx  VirtualSeriesBrowser.tsx
src/constants/: index.ts
src/hooks/: useAsync.ts  useChannelListName.ts  useChannelSearch.ts  useContentMetadata.ts  useContentPlayback.ts  useDebounce.ts  useHistoryTracking.ts  useImageCache.ts  useIntersectionObserver.ts  useKeyboardNavigation.ts  useLocalStorage.ts  useMemoCompare.ts  useNormalizedSeriesDetails.ts  usePerformanceMonitor.ts  useSavedFilters.ts  useStreamUrl.ts
src/pages/: AuthPage.css  (+2 more)
(+95 files in other folders)
