[package]
name = "tollo"
version = "0.1.8"
description = "Tollo - A modern IPTV player"
authors = ["sambergo"]
license = "MIT"
repository = "https://github.com/sambergo/tollo"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Define binary target (required for Windows)
[[bin]]
name = "tollo"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tollo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
dirs = "5.0.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = [
  "blocking",
  "json",
  "rustls-tls",
], default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
sha2 = "0.10"

# Add smart caching dependencies
dashmap = "6.1"

# Error handling dependencies
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
tempfile = "3.10"
serial_test = "3.0"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
rstest = "0.19"

[[bench]]
name = "fuzzy_search_bench"
harness = false

[[bench]]
name = "database_bench"
harness = false

[[bench]]
name = "m3u_parser_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false
