[package]
name = "xtauri"
version = "0.1.8"
description = "xTauri - A modern IPTV player"
authors = ["thiiz"]
license = "MIT"
repository = "https://github.com/thiiz/xtauri"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# Define binary target (required for Windows)
[[bin]]
name = "xtauri"
path = "src/main.rs"

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "xtauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.30.0", features = ["bundled"] }
dirs = "5.0.1"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = [
  "blocking",
  "json",
  "rustls-tls",
], default-features = false }
chrono = { version = "0.4.38", features = ["serde"] }
uuid = { version = "1.8.0", features = ["v4"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
sha2 = "0.10"

# Add smart caching dependencies
dashmap = "6.1"

# Error handling dependencies
thiserror = "1.0"
anyhow = "1.0"

# Xtream integration dependencies
aes = "0.8"
rand = "0.8"
base64 = "0.22"
url = "2.5"

# Platform-specific secure storage
keyring = "2.3"
pbkdf2 = "0.12"
hmac = "0.12"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"
tempfile = "3.10"
serial_test = "3.0"
proptest = "1.4"
criterion = { version = "0.5", features = ["html_reports"] }
mockall = "0.12"
rstest = "0.19"
wiremock = "0.6"

[[bench]]
name = "fuzzy_search_bench"
harness = false

[[bench]]
name = "database_bench"
harness = false

[[bench]]
name = "cache_bench"
harness = false
